fix letter spacing for registration forms

--- a/app/assets/stylesheets/admin/registration.scss
+++ b/app/assets/stylesheets/admin/registration.scss
@@ -34,8 +34,7 @@
 		border: 1px solid lightgrey;
 		box-shadow: 0 0 2px lightgrey;
 		color: black;
-		letter-spacing: 0.05em;
-		letter-spacing: 2px;
+		letter-spacing: 0;
 	  padding: 0 16px;
 	  font-weight: 500;
 	}
